<resources>
    <string name="app_name">Agenda</string>
    <string name="botaoCadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="Telefone">Telefone</string>
    <string name="Endereco">Endereço</string>
    <string name="Email">E-Mail</string>
    <string name="Facebook">Facebook</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
